--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 
 <body>
-
     <div class="topnav">
-        <a class="active" href="#">moviedb</a>
+        <a class="active" href="https://dev-moviedb2.vercel.app/">moviedb</a>
+        <div class="mode">
+            <div id="toggle">
+                <i class="indicator"></i>
+            </div>
+        </div>
         <div class="search-container">
             <form role="search" id="form">
                 <input type="search" id="query" name="q" placeholder="Search..">
             </form>
         </div>
     </div>
-
-    <div style="padding-left:16px">
-
-        <section id="section">
-            <!--     <div class="row">
+    <section id="section">
+        <!--     <div class="row">
       <div class="column">
         <div class="card">
           <center><img src="#" id="image" class="thumbnail"></center>
@@ -29,8 +30,7 @@
         </div>
       </div>
     </div> -->
-        </section>
-
+    </section>
 </body>
 <script src="script.js"></script>
 
